--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kimki - Yaratıcı Tasarım</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&family=Sacramento&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -24,19 +24,19 @@
             position: relative;
             text-align: center;
             padding: 20px;
+            background-image: url('https://via.placeholder.com/1920x1080'); /* Arka plan */
+            background-size: cover;
+            background-position: center;
+            filter: brightness(0.5);
         }
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 3.5rem;
+            font-size: 4rem;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
             animation: fadeInText 2s ease-out;
-        }
-
-        @keyframes fadeInText {
-            0% { opacity: 0; transform: translateY(-50px); }
-            100% { opacity: 1; transform: translateY(0); }
+            margin-top: 100px;
         }
 
         p {
@@ -45,6 +45,12 @@
             margin-top: 20px;
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
             animation: fadeInText 3s ease-out 1s forwards;
+            font-family: 'Sacramento', cursive;
+        }
+
+        @keyframes fadeInText {
+            0% { opacity: 0; transform: translateY(-50px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
 
         .gallery {
@@ -69,10 +75,11 @@
             background-color: rgba(255, 255, 255, 0.1);
             border: 2px solid rgba(255, 255, 255, 0.3);
             transform: rotate(5deg);
+            transition: all 0.3s ease;
         }
 
         .image-container:hover {
-            transform: scale(1.05) rotate(0deg);
+            transform: scale(1.1) rotate(0deg);
             box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
         }
 
