--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             height: 100vh;
             overflow: hidden;
             position: relative;
@@ -28,7 +29,7 @@
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 3.5rem;
+            font-size: 4rem;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
             animation: fadeInText 2s ease-out;
@@ -49,8 +50,8 @@
 
         .gallery {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 30px;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
             margin-top: 40px;
             width: 80%;
             position: relative;
@@ -58,13 +59,13 @@
 
         .image-container {
             position: relative;
-            width: 250px;
+            width: 100%;
             height: 250px;
             margin: 20px;
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
             cursor: pointer;
             background-color: rgba(255, 255, 255, 0.1);
             border: 2px solid rgba(255, 255, 255, 0.3);
@@ -74,6 +75,7 @@
         .image-container:hover {
             transform: scale(1.05) rotate(0deg);
             box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
+            filter: brightness(1.1);
         }
 
         .image-container img {
@@ -101,6 +103,12 @@
             align-items: center;
             z-index: 1000;
             display: none;
+            transition: opacity 0.3s ease;
+        }
+
+        .fullscreen.active {
+            display: flex;
+            opacity: 1;
         }
 
         .fullscreen img {
@@ -108,13 +116,10 @@
             max-height: 95%;
             object-fit: contain;
             border-radius: 15px;
+            transition: transform 0.3s ease;
         }
 
-        .fullscreen.active {
-            display: flex;
-        }
-
-        .close-btn {
+        .fullscreen .close-btn {
             position: absolute;
             top: 20px;
             right: 20px;
@@ -126,10 +131,30 @@
             cursor: pointer;
             padding: 10px;
             z-index: 2000;
+            transition: background 0.3s ease;
         }
 
-        .close-btn:hover {
+        .fullscreen .close-btn:hover {
             background: rgba(255, 255, 255, 0.2);
+        }
+
+        .fullscreen .close-btn:focus {
+            outline: none;
+        }
+
+        /* Responsive tasarım */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 3rem;
+            }
+
+            .gallery {
+                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            }
+
+            p {
+                font-size: 1.2rem;
+            }
         }
 
     </style>
