--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         .gallery {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 30px;
+            gap: 20px;
             margin-top: 40px;
             width: 80%;
             position: relative;
@@ -59,9 +59,9 @@
 
         .image-container {
             position: relative;
-            width: 250px;
-            height: 250px;
-            margin: 20px;
+            width: 200px; /* Küçültülmüş boyut */
+            height: 200px; /* Küçültülmüş boyut */
+            margin: 10px;
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
@@ -135,14 +135,17 @@
 
         /* Video Stili */
         .video-container {
-            width: 80%;
-            max-width: 800px;
+            width: 70%;
+            max-width: 700px; /* Küçültülmüş boyut */
             margin-top: 50px;
             position: relative;
             background-color: rgba(255, 255, 255, 0.1);
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
+            display: flex;
+            justify-content: center; /* Ortalamak için */
+            align-items: center;
         }
 
         video {
