--- a/haber.html
+++ b/haber.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mertens</title>
+    <title>Güncel Haberler</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Raleway:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         * {
@@ -43,7 +43,7 @@
 
         .news-gallery {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             width: 80%;
             margin-top: 30px;
@@ -53,7 +53,7 @@
         .news-item {
             position: relative;
             width: 100%;
-            height: 220px; /* Daha küçük boyut */
+            height: 220px;
             margin: 10px;
             border-radius: 10px;
             overflow: hidden;
@@ -62,6 +62,7 @@
             border: 2px solid rgba(255, 255, 255, 0.3);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
+            object-fit: cover;
         }
 
         .news-item:hover {
@@ -81,7 +82,6 @@
             transform: scale(1.1);
         }
 
-        /* Başlık Resminin Üzerinde Görünmesi */
         .news-item .title {
             position: absolute;
             top: 5px;
@@ -89,7 +89,7 @@
             transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            font-size: 1.3rem; /* Küçültülmüş başlık boyutu */
+            font-size: 1.3rem;
             padding: 8px;
             text-align: center;
             font-weight: bold;
@@ -103,7 +103,6 @@
             transform: translateX(-50%) translateY(-8px);
         }
 
-        /* Haber içeriği küçük ve şık olacak şekilde ayarlandı */
         .news-content {
             display: none;
             color: white;
@@ -111,7 +110,7 @@
             padding: 15px;
             margin-top: 10px;
             border-radius: 10px;
-            font-size: 0.95rem; /* Küçültülmüş içerik boyutu */
+            font-size: 0.95rem;
             line-height: 1.5;
             max-width: 80%;
             margin: 20px auto;
@@ -129,7 +128,6 @@
             100% { opacity: 1; transform: scale(1); }
         }
 
-        /* Mobil uyumluluk */
         @media (max-width: 768px) {
             body {
                 padding: 20px;
@@ -144,11 +142,10 @@
             }
 
             .news-gallery {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
                 gap: 15px;
             }
         }
-
     </style>
 </head>
 <body>
@@ -157,15 +154,28 @@
     <p>En Son Gelişmeler ve Öne Çıkanlar</p>
 
     <div class="news-gallery">
+        <!-- Haber 1 -->
         <div class="news-item" onclick="showContent(1)">
             <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
             <div class="title">Durdurlamaz!</div>
         </div>
+
+        <!-- Haber 2 (Yeni haber ekledik) -->
+        <div class="news-item" onclick="showContent(2)">
+            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
+            <div class="title">O Bir Lider</div>
+        </div>
     </div>
 
+    <!-- İçerikler -->
     <div class="news-content" id="content-1">
         <h2>Durdurulamaz</h2>
-        <p>mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
+        <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
+    </div>
+
+    <div class="news-content" id="content-2">
+        <h2>O Bir Lider</h2>
+        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor</p>
     </div>
 
     <script>
@@ -177,5 +187,6 @@
             document.getElementById('content-' + newsId).classList.add('active');
         }
     </script>
+
 </body>
 </html>
