--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halloween Efsanesi</title>
+    <title>Halloween Chaos 🎃</title>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Limbo&display=swap" rel="stylesheet">
     <style>
         * {
@@ -14,29 +14,29 @@
 
         body {
             font-family: 'Creepster', cursive;
-            background: radial-gradient(circle, #000, #2e0132, #000);
+            background: linear-gradient(135deg, #1a001a, #330033, #000);
             color: white;
             overflow: hidden;
             height: 100vh;
-            position: relative;
-            animation: bg-change 8s infinite alternate;
+            animation: bg-glow 10s infinite alternate;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            position: relative;
         }
 
-        @keyframes bg-change {
-            0% { background: radial-gradient(circle, #000, #2e0132, #000); }
-            50% { background: radial-gradient(circle, #1e0031, #5b003f, #000); }
-            100% { background: radial-gradient(circle, #000, #2e0132, #000); }
+        @keyframes bg-glow {
+            0% { background: linear-gradient(135deg, #1a001a, #330033, #000); }
+            50% { background: linear-gradient(135deg, #000, #550055, #220022); }
+            100% { background: linear-gradient(135deg, #1a001a, #330033, #000); }
         }
 
         h1 {
             font-size: 4rem;
             color: #ff7300;
             text-shadow: 0 0 20px #ff7300, 0 0 40px #ff3300;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             animation: flicker 3s infinite alternate;
         }
 
@@ -47,42 +47,37 @@
         }
 
         p {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             margin-bottom: 30px;
             color: rgba(255, 255, 255, 0.9);
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
             animation: fade-in 2s ease-in-out;
         }
 
-        @keyframes fade-in {
-            0% { opacity: 0; transform: translateY(-20px); }
-            100% { opacity: 1; transform: translateY(0); }
-        }
-
         .gallery {
             position: relative;
             width: 90%;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            display: flex;
+            flex-wrap: wrap;
             gap: 30px;
-            animation: float 5s infinite ease-in-out;
+            justify-content: center;
+            animation: chaos 10s infinite ease-in-out;
         }
 
-        @keyframes float {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-            100% { transform: translateY(0); }
+        @keyframes chaos {
+            0%, 100% { transform: rotate(0deg); }
+            50% { transform: rotate(3deg); }
         }
 
         .image-container {
             position: relative;
-            width: 100%;
-            padding-top: 100%; /* Kare oranı */
+            width: 150px;
+            height: 150px;
             overflow: hidden;
-            border: 3px solid rgba(255, 115, 0, 0.8);
+            border: 4px solid rgba(255, 115, 0, 0.8);
             border-radius: 15px;
             background: rgba(255, 115, 0, 0.2);
-            transform: rotate(calc(-3deg + 6deg * random()));
+            transform: rotate(calc(-10deg + 20deg * random()));
             box-shadow: 0 0 20px rgba(255, 115, 0, 0.7);
             transition: transform 0.3s, box-shadow 0.3s;
         }
@@ -93,9 +88,6 @@
         }
 
         .image-container img {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -103,7 +95,7 @@
         }
 
         .image-container:hover img {
-            transform: scale(1.1);
+            transform: scale(1.2);
         }
 
         .emoji {
@@ -115,12 +107,12 @@
 
         @keyframes emoji-float {
             0% { transform: translateY(0); opacity: 1; }
-            50% { transform: translateY(-20px) rotate(20deg); opacity: 0.8; }
+            50% { transform: translateY(-30px) rotate(20deg); opacity: 0.8; }
             100% { transform: translateY(0); opacity: 1; }
         }
 
         .emoji:nth-child(1) { top: 10%; left: 20%; animation-delay: 1s; }
-        .emoji:nth-child(2) { top: 20%; left: 60%; animation-delay: 2s; }
+        .emoji:nth-child(2) { top: 20%; left: 70%; animation-delay: 2s; }
         .emoji:nth-child(3) { top: 70%; left: 40%; animation-delay: 3s; }
         .emoji:nth-child(4) { top: 50%; left: 80%; animation-delay: 0s; }
         .emoji:nth-child(5) { top: 30%; left: 10%; animation-delay: 1.5s; }
@@ -155,25 +147,12 @@
             color: white;
             cursor: pointer;
         }
-
-        /* Responsive Tasarım */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 3rem;
-            }
-            p {
-                font-size: 1.2rem;
-            }
-            .gallery {
-                gap: 15px;
-            }
-        }
     </style>
 </head>
 <body>
 
-    <h1>🎃 Halloween Party 👻</h1>
-    <p>Korku, eğlence ve unutulmaz anlar burada başlıyor!</p>
+    <h1>🎃 Halloween Kaosu 👻</h1>
+    <p>Korku ve eğlencenin çılgın karışımı burada!</p>
 
     <!-- Animasyonlu Emojiler -->
     <div class="emoji">🎃</div>
@@ -201,7 +180,6 @@
         </div>
     </div>
 
-    <!-- Tam Ekran Görüntüleme -->
     <div class="fullscreen" id="fullscreen-container">
         <span class="close-btn" onclick="closeFullscreen()">✖</span>
         <img id="fullscreen-image" src="" alt="Fullscreen Image">
