--- a/tier.html
+++ b/tier.html
@@ -1,176 +1,199 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FFA Maç Kuralları</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Zilla+Slab+Highlight:wght@700&display=swap');
-
+        /* Genel Ayarlar */
         body {
+            font-family: 'Verdana', sans-serif;
             margin: 0;
-            font-family: 'Orbitron', sans-serif;
-            background: linear-gradient(135deg, #120078, #9d0191, #fd3a69, #ffb30f);
-            background-size: 400% 400%;
-            animation: gradientMove 8s ease infinite;
-            color: #ffffff;
-            overflow-x: hidden;
+            padding: 0;
+            background-color: #111;
+            color: white;
+            overflow: hidden;
         }
 
-        @keyframes gradientMove {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        h1 {
+        /* Başlık ve Arka Plan */
+        header {
+            background: linear-gradient(45deg, #ff6a00, #ee0979);
             text-align: center;
-            font-size: 4rem;
-            margin-top: 20px;
-            color: #ffeb3b;
-            text-shadow: 0 0 15px #ffeb3b, 0 0 30px #ff9800;
-            animation: pulse 3s infinite;
+            padding: 100px 20px;
+            font-size: 3em;
+            font-weight: bold;
+            color: white;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+            text-shadow: 3px 3px 10px rgba(255, 255, 255, 0.3);
+            animation: pulse 2s infinite ease-in-out;
         }
 
         @keyframes pulse {
-            0% { text-shadow: 0 0 15px #ffeb3b, 0 0 30px #ff9800; }
-            50% { text-shadow: 0 0 30px #ffc107, 0 0 60px #ff5722; }
-            100% { text-shadow: 0 0 15px #ffeb3b, 0 0 30px #ff9800; }
+            0% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.05); opacity: 0.9; }
+            100% { transform: scale(1); opacity: 1; }
         }
 
+        /* Sayfa İçeriği */
         .container {
-            max-width: 1400px;
-            margin: 40px auto;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.85);
-            border-radius: 20px;
-            border: 4px solid #ff9800;
-            box-shadow: 0 0 30px #ff5722;
+            padding: 30px;
+            max-width: 1200px;
+            margin: 20px auto;
+            animation: slideIn 1.5s ease-out;
         }
 
-        .rule {
-            background: rgba(255, 87, 34, 0.85);
-            border: 2px solid #ffcc00;
-            padding: 20px;
-            border-radius: 15px;
-            margin-bottom: 20px;
-            position: relative;
-            transition: transform 0.4s, box-shadow 0.4s;
-            color: #ffffff;
-            font-family: 'Zilla Slab Highlight', cursive;
-            box-shadow: 0 0 15px rgba(255, 87, 34, 0.7);
-        }
-
-        .rule:hover {
-            transform: scale(1.05) rotate(2deg);
-            box-shadow: 0 0 40px #ff5722, 0 0 60px #ff9800;
-        }
-
-        .rule h2 {
+        /* Kural Listesi */
+        .rules {
+            list-style: none;
+            padding: 0;
             margin: 0;
-            color: #ffeb3b;
-            font-size: 1.8rem;
-            text-transform: uppercase;
-            text-shadow: 0 0 10px #ffeb3b, 0 0 20px #ff9800;
         }
 
-        .rule p {
-            margin: 10px 0 0;
-            font-size: 1.4rem;
-            line-height: 1.8;
-            color: #ffffff;
+        .rules li {
+            background: radial-gradient(circle, rgba(255, 87, 34, 1) 0%, rgba(255, 193, 7, 1) 100%);
+            margin: 20px 0;
+            padding: 25px;
+            border-radius: 20px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+            transition: transform 0.3s ease, background 0.5s ease;
+            cursor: pointer;
+        }
+
+        .rules li:hover {
+            transform: rotate(10deg) scale(1.1);
+            background: linear-gradient(45deg, #9c27b0, #2196f3);
+        }
+
+        .rules li p {
+            font-size: 1.2em;
+            line-height: 1.6em;
+        }
+
+        .rules li .rule-title {
+            font-size: 1.6em;
+            font-weight: bold;
+            text-transform: uppercase;
+            color: #fff;
+            margin-bottom: 10px;
+        }
+
+        .highlight {
+            color: #ffeb3b;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         }
 
         .rule-number {
-            position: absolute;
-            top: -20px;
-            left: -20px;
             background: #ff5722;
-            color: #fff;
-            font-size: 1.5rem;
-            padding: 15px;
+            padding: 5px 10px;
+            font-size: 1.2em;
+            font-weight: bold;
+            color: white;
             border-radius: 50%;
-            box-shadow: 0 0 15px #ff5722, 0 0 30px #ffcc00;
+            position: absolute;
+            top: 10px;
+            right: 20px;
         }
 
+        /* Animasyonlar */
+        @keyframes slideIn {
+            0% {
+                transform: translateY(100px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        /* Footer */
         footer {
+            background-color: #222;
             text-align: center;
-            padding: 20px 0;
-            background: #1b0033;
-            color: #ffcc00;
-            font-size: 1.2rem;
-            border-top: 4px solid #ff5722;
-            text-shadow: 0 0 10px #ffcc00;
+            padding: 30px;
+            font-size: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            color: #ccc;
         }
 
-        footer a {
-            color: #ffcc00;
-            text-decoration: none;
+        /* Özel Animasyonlar */
+        .hover-shadow {
+            transition: box-shadow 0.3s ease;
         }
 
-        footer a:hover {
-            text-decoration: underline;
+        .hover-shadow:hover {
+            box-shadow: 0 0 25px rgba(255, 193, 7, 0.8);
+        }
+
+        /* Responsiveness */
+        @media screen and (max-width: 768px) {
+            header {
+                font-size: 2em;
+            }
+
+            .container {
+                padding: 15px;
+            }
+
+            .rules li {
+                padding: 15px;
+            }
+
+            footer {
+                font-size: 0.8em;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>FFA Maç Kuralları</h1>
 
-    <div class="container">
-        <div class="rule">
+<header>
+    FFA Maç Kuralları
+</header>
+
+<div class="container">
+    <ul class="rules">
+        <li class="hover-shadow">
+            <div class="rule-title">1. Emergency Rule</div>
             <div class="rule-number">1</div>
-            <h2>Emergency Rule</h2>
-            <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 gol verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">2</div>
-            <h2>Loan Rule</h2>
-            <p>Sadece maçın kaderini değiştirmeyecek belli kişiler loan alınabilir ve her sezon takım başına ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">3</div>
-            <h2>3. Parti Yazılım</h2>
-            <p>Clumsy, VPN, Script, FastFlag gibi yazılımlar yasaktır. (Roblox’un Yasaklanması gibi olağan şeyler dışında)</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">4</div>
-            <h2>PB</h2>
-            <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2. Eğer 2 kere yapılırsa +1.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">5</div>
-            <h2>CK Rush</h2>
-            <p>Korner kullanan oyuncuya rush yapmak 1/2'dir. 2. kez yapılırsa yc, 3. kez yapılırsa 2. yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">6</div>
-            <h2>Last</h2>
-            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 gol ve yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">7</div>
-            <h2>Leave Ball</h2>
-            <p>Eğer rakip takımdan bir oyuncuya kayıp topu alırsanız geri bırakmak zorundasınız. Eğer dokunursanız veya 3 saniye dolmadan topu alırsanız yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">8</div>
-            <h2>Last CB</h2>
-            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız gol iptali ve yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">9</div>
-            <h2>Visu, 3x, 4x, 5x</h2>
-            <p>Bunun gibi kombinasyonlar hem şutta hem de pasta yasaktır. 1/2'dir, 2. yapılışında yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">36</div>
-            <h2>GK Combo</h2>
-            <p>GK'da her türlü kombinasyon yasaktır. (örneğin: x lmb). Cezası yc'dir.</p>
-        </div>
-    </div>
+            <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 goal verilir.</p>
+        </li>
 
-    <footer>
-        © 2025 FFA Maç Kuralları. Tüm hakları saklıdır. | <a href="#">İletişim</a>
-    </footer>
+        <li class="hover-shadow">
+            <div class="rule-title">2. Loan Rule</div>
+            <div class="rule-number">2</div>
+            <p>Sadece maçın kaderini değiştirmicek belli kişiler loan alınabilir. Ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
+        </li>
+
+        <li class="hover-shadow">
+            <div class="rule-title">3. 3. Parti Yazılım</div>
+            <div class="rule-number">3</div>
+            <p>Clumsy, VPN, Script, FastFlag vs. yasaktır. (Roblox’un Yasaklanması gibi Olağan şeyler dışında)</p>
+        </li>
+
+        <li class="hover-shadow">
+            <div class="rule-title">4. PB</div>
+            <div class="rule-number">4</div>
+            <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2 dir. 2 kere yapılırsa +1’dir.</p>
+        </li>
+
+        <li class="hover-shadow">
+            <div class="rule-title">5. CK Rush</div>
+            <div class="rule-number">5</div>
+            <p>Korner kullanan oyuncuya rush 1/2dir. 2. yapımında yc verilir. 3. yapımında 2. yc verilir.</p>
+        </li>
+
+        <!-- Diğer kurallar burada aynı şekilde devam eder... -->
+    </ul>
+</div>
+
+<footer>
+    © 2025 FFA - Tüm Hakları Saklıdır.
+</footer>
+
 </body>
 </html>
